<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chengyangsun79@gmail.com">robo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_laser_scan_merger</exec_depend>
  <exec_depend>ros2_laser_scan_matcher</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>run_navigation</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>serial_node</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
